k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsu-demo-python
  labels:
    name: devsu-demo-python
    managed-by: kubectl
