k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-demo-python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-demo-python
  template:
    metadata:
      labels:
        app: devsu-demo-python
    spec:
      containers:
        - name: web
          image: docker.io/osmardiego/devsu-demo-python:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          startupProbe:
            httpGet:
              path: /api/health/
              port: 8000
              host: 127.0.0.1
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health/
              port: 8000
              host: 127.0.0.1
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health/
              port: 8000
              host: 127.0.0.1
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: devsu-demo-python-data
