k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-demo-python
spec:
  selector:
    app: devsu-demo-python
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
