k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo-python
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - devsu-demo.local
      secretName: devsu-demo-python-tls
  rules:
    - host: devsu-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsu-demo-python
                port:
                  number: 80
